# 2025-03-10-test-project

./: .pre-commit-config.yaml  Dockerfile  Описание задач.docx
1/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
1/src/my_fastapi_app/: config.py  lifespan.py  main.py  state.py
1/src/my_fastapi_app/core/: config.py  connection.py  lifespan.py  request.py  state.py
1/src/my_fastapi_app/routers/: api.py  redirects.py
1/tests/: conftest.py  mixins.py  test_swagger.py
2/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
2/src/my_aiohttp_app/: clickhouse.py  config.py  dto.py  github_repos_saver.py  main.py  schema.py  serializers.py  utils.py
2/src/my_aiohttp_app/clickhouse/: client.py  core.py  managers.py  schemas.py  serializers.py
2/src/my_aiohttp_app/core/: serializer.py
2/tests/: factories.py  test_github_saver.py  test_github_scrapper.py
3/: requirements.txt
4/: solution.sql
