[project]
name = "my_fastapi_app"
version = "0.1.0"
description = ""
authors = [
    {name = "Холоднов Эмиль",email = "emil.kholod@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.isort]
profile = "black"
filter_files = true
line_length = 88
known_third_party = "fastapi"
src_paths = "./src"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "DC100", "D100",
]
exclude = [
    ".git",
    "__pycache__",
]
inline-quotes = '"'

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
